Updated the website to mention the new git repository.

--- a/website/html/faq.html
+++ b/website/html/faq.html
@@ -107,6 +107,7 @@ is pointless. If a file changes at all, the whole file will be transferred in
 the next backup.
 <li>Scheduling.
 <li>Email backup success/failure notifications.
+<li>A live monitor on the server.
 </ul>
 </FONT>
 </P>
@@ -125,10 +126,8 @@ A. The following items are on my TODO list:
 <li>Investigate HFS / resource forks and Mac support.
 <li>Add fifo read support.
 <li>Add include/exclude wildcards.
-<li>Think about having an ncurses style monitor for the server.
-  Probably best make some sort of generic interface that can have different
-  front-ends.
 <li>Add xattr/acl support.
+<li>Add an ncurses wrapper to the monitor commands.
 </ul>
 </FONT>
 </P>
