--- a/website/html/index.html
+++ b/website/html/index.html
@@ -94,10 +94,16 @@ The main author of Burp is Graham Keeling.
 <TD ALIGN="LEFT">
 
 <P>
+<FONT COLOR="#99CCFF">2011-03-28: git repository added. See the DOWNLOADS
+page.
+</FONT>
+</P>
+
+<P>
 <FONT COLOR="#99CCFF">2011-03-27: burp-1.1.30 is released. See the DOWNLOADS
 page.
 <pre>
-2011-03-27 Changes in burp-1.1.30:
+Changes in burp-1.1.30:
   * First pass at having a live status monitor.
   * Fixed a bug that meant you couldn't restore links.
   * Fixed a bug when freeing structs at the end of a restore.
