Prepare for 1.1.50 release.

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -94,6 +94,21 @@ The main author of Burp is Graham Keeling.
 <TD ALIGN="LEFT">
 
 <P>
+<FONT COLOR="#99CCFF">2011-04-14: burp-1.1.50 is released.
+<pre>
+Changes in burp-1.1.50:
+  * Added a script for backing up zfs snapshots with 'zfs send'.
+  * Added the ability to set the level of compression.
+  * Added the ability to turn off compression.
+  * Added an option to define the poll interval in the Windows installer.
+  * Added the ability to turn off librsync delta differencing.
+  * Added the ability to give arguments to backup/restore/pre/post scripts.
+  * Make configure/make work better on Solaris.
+</pre>
+</FONT>
+</P>
+
+<P>
 <FONT COLOR="#99CCFF">2011-04-02: burp-1.1.40 is released.
 <pre>
 Changes in burp-1.1.40:
