--- a/website/html/index.html
+++ b/website/html/index.html
@@ -94,6 +94,11 @@ The main author of Burp is Graham Keeling.
 <TD ALIGN="LEFT">
 
 <P>
+<FONT COLOR="#99CCFF">2011-09-01: In the UK, a nice half-page review of burp has appeared in the October edition of 'Linux Format' magazine, in their 'Hot Picks' section.
+</FONT>
+</P>
+
+<P>
 <FONT COLOR="#99CCFF">2011-07-26: burp-1.1.70 is released.
 <pre>
 Changes in burp-1.1.70:
@@ -362,7 +367,7 @@ Burp, don't suck.
 </td>
 <td align="right">
 <font color="#99ccff">
-Last updated: July 2011
+Last updated: September 2011
 </font>
 </td></tr></table>
 
