--- a/website/html/faq.html
+++ b/website/html/faq.html
@@ -111,6 +111,8 @@ nodes.
 <li>Pre/post backup/restore client scripts.
 <li>Backups of Solaris ZFS snapshot send/receives.
 <li>Linux and FreeBSD acl/xattr support.
+<li>Multiple retention periods (e.g, keep 1 backup per day for 7 days, 1 backup per week for 4 weeks, 1 backup per 4 weeks for a year).
+<li>Network rate limiting.
 </ul>
 </FONT>
 </P>
@@ -123,7 +125,8 @@ Q. What is on the roadmap? What doesn't work?
 </P>
 <P>
 <FONT COLOR="#99CCFF">
-A. The following items are on my TODO list:
+A. The following items are on my TODO list (for the full list so the TODO file
+in the top level directory of the source):
 <ul>
 <li>Add extra ways of deciding when to delete old backups - e.g, by time, or
 by space.
@@ -131,8 +134,6 @@ by space.
 <li>Server-side encryption option, so that network deltas can be done with
     encryption.
 <li>Improve the status monitor.
-<li>Add an option to set hardlinked_archive on a cycle, instead of just
-being either on or off.
 <li>Investigate HFS / resource forks and Mac support.
 <li>Add include/exclude wildcards.
 </ul>
@@ -381,7 +382,7 @@ Burp, don't suck.
 </td>
 <td align="right">
 <font color="#99ccff">
-Last updated: September 2011
+Last updated: October 2011
 </font>
 </td></tr></table>
 
