--- a/website/html/howto.html
+++ b/website/html/howto.html
@@ -495,6 +495,11 @@ CLIENT CONFIGURATION FILE OPTIONS
 	      have multiple exclude extension lines. For example, set 'vdi' to
 	      exclude VirtualBox disk images.
 
+       max_file_size=[b/Kb/Mb/Gb]
+	      Do  not  back up files that are greater than the specified size.
+	      Example: 'max_file_size = 100Mb'. Set to 0 (the default) to have
+	      no limit.
+
        cross_filesystem=[path]
 	      Allow backups to cross a particular filesystem mountpoint.
 
