Tweaks for release.

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -96,8 +96,9 @@ The main author of Burp is Graham Keeling.
 <FONT COLOR="#99CCFF">2011-11-26: burp-1.2.5 is released.
 <pre>
 2011-11-26 Changes in burp-1.2.5:
-  * Fix critical server path comparison typo bug. If you have been using a
-        1.2.4 server, you need to upgrade immediately!
+  * IMPORTANT: Fixed critical path comparison typo bug. If you have been using
+	1.2.4 either as a server or as a client, you need to upgrade
+	immediately! Backups made with 1.2.4 should be treated as suspicious.
   * Add a 'max_file_size' option.
   * Store windows file attributes in a separate field to the standard unix ones.
 </pre>
