Website tweaks, add 'test scripts for release' TODO items.

--- a/website/html/index.html
+++ b/website/html/index.html
@@ -83,7 +83,9 @@ The main author of Burp is Graham Keeling.
 </FONT>
 </P>
 
-<BR><BR>
+<BR>
+<h3><font color="#99CCFF">Current stable version: 1.2.2</font></h3>
+<BR>
 
 <h3><font color="#99CCFF">NEWS</font></h3>
 
