Tweaks for release.

--- a/website/html/faq.html
+++ b/website/html/faq.html
@@ -113,7 +113,7 @@ nodes.
 <li>Linux and FreeBSD acl/xattr support.
 <li>Multiple retention periods (e.g, keep 1 backup per day for 7 days, 1 backup per week for 4 weeks, 1 backup per 4 weeks for a year).
 <li>Network rate limiting.
-<li>Storage data deduplication.
+<li>Storage data deduplication (in versions > 1.2.2)
 </ul>
 </FONT>
 </P>
